Add new flag 'separate' to export