@@ -1,7 +1,6 @@
 package nexusvault.cli.extensions.base.command;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import nexusvault.cli.core.App;
 import nexusvault.cli.core.AutoInstantiate;
@@ -43,13 +42,13 @@ final class AppOutputPath implements ArgumentHandler, CommandHandler {
 
 	@Override
 	public void onCommand(Arguments args) {
-		final Path path = Paths.get(args.getUnnamedArgs()[0]);
+		final Path path = Path.of(args.getUnnamedArgs()[0]);
 		App.getInstance().getExtensionManager().getExtension(AppBaseExtension.class).setOutputPath(path);
 	}
 
 	@Override
 	public void execute(Argument args) {
-		final Path path = Paths.get(args.getValue());
+		final Path path = Path.of(args.getValue());
 		App.getInstance().getExtensionManager().getExtension(AppBaseExtension.class).setOutputPath(path);
 	}
 
