@@ -3,7 +3,6 @@ package nexusvault.cli.extensions.convert.command;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
@@ -26,6 +25,7 @@ import nexusvault.cli.extensions.convert.resource.FileResource;
 import nexusvault.cli.extensions.convert.resource.Resource;
 import nexusvault.vault.IdxPath;
 
+@Deprecated
 public final class Convert extends AbstractCommandHandler {
 
 	@Override
@@ -84,7 +84,7 @@ public final class Convert extends AbstractCommandHandler {
 		boolean allFilesFound = true;
 
 		for (final var strPath : args.getUnnamedArgs()) {
-			final var path = Paths.get(strPath);
+			final var path = Path.of(strPath);
 			if (Files.exists(path)) {
 				targets.add(new FileResource(path));
 			} else {
@@ -192,7 +192,7 @@ public final class Convert extends AbstractCommandHandler {
 
 		final var pathVariations = new Path[] { App.getInstance().getAppConfig().getOutputPath(), App.getInstance().getAppConfig().getApplicationPath() };
 		for (final var possibleFile : possibleFiles) {
-			var path = Paths.get(possibleFile);
+			var path = Path.of(possibleFile);
 
 			if (!Files.exists(path)) {
 				if (path.isAbsolute()) {
